objects/EUR_CRM_Contract_Payment_Plan_Period__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <formula>if( ISBLANK(EUR_CRM_Contract_Product_Item__r.EUR_CRM_Brand__c) , EUR_CRM_Contract_Product_Item__r.EUR_CRM_Brand_Quality__r.Name ,EUR_CRM_Contract_Product_Item__r.EUR_CRM_Brand__r.Name)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Earliest_Date_of_Invoice__c</fullName>
        <label>Earliest Date of Invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Mechanic_Type__c</fullName>
        <formula>EUR_CRM_Contract_Activity_Item__r.EUR_CRM_Mechanic_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mechanic Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Unit__c</fullName>
        <label>Unit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CPPP_Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Activity_Item__c</fullName>
        <label>Contract Activity Item (EU)</label>
        <referenceTo>EUR_CRM_Contract_Activity_Item__c</referenceTo>
        <relationshipLabel>Contract Payment Plan Periods (EU)</relationshipLabel>
        <relationshipName>Contract_Payment_Plan_Periods</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Payment_Plan__c</fullName>
        <label>Contract Payment Plan (EU)</label>
        <referenceTo>EUR_CRM_Contract_Payment_Plan__c</referenceTo>
        <relationshipLabel>Contract Payment Plan Periods (EU)</relationshipLabel>
        <relationshipName>Contract_Payment_Plan_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Product Item (EU)</label>
        <referenceTo>EUR_CRM_Contract_Product_Item__c</referenceTo>
        <relationshipLabel>Contract Payment Plan Periods (EU)</relationshipLabel>
        <relationshipName>Contract_Payment_Plan_Periods_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_List_of_Brand__c</fullName>
        <label>List of Brand</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Period_End_Date__c</fullName>
        <label>Payment Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Period_Start_Date__c</fullName>
        <label>Payment Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contract Payment Plan Period (EU)</label>
    <nameField>
        <displayFormat>CPPP-{0000000000}</displayFormat>
        <label>CPPP  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payment Plan Periods (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Contract_Payment_Plan_Period</fullName>
        <active>true</active>
        <label>Contract Payment Plan Period</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Contract_Payment_Plan_Period</fullName>
        <active>true</active>
        <label>EUR DE Contract Payment Plan Period</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>